--- a/charts/influxdb/templates/service.yaml
+++ b/charts/influxdb/templates/service.yaml
@@ -10,6 +10,9 @@ metadata:
     {{- include "influxdb.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
+{{- if (and (eq .Values.service.type "ClusterIP") (.Values.service.clusterIP)) }}
+  clusterIP: {{ .Values.service.clusterIP }}
+{{end}}
   ports:
   - name: api
     port: {{ .Values.config.http.bind_address | default 8086 }}
